# TeaFamily

./: .gitignore  CMakeLists.txt  README.md  prompt.txt
GreenTea/: CMakeLists.txt  config.json
GreenTea/src/: main.cpp  updater.cpp  updater.h  watchdog.cpp  watchdog.h
HoneyTea/: CMakeLists.txt  config.json
HoneyTea/src/: honey_tea.cpp  honey_tea.h  main.cpp  plugin_manager.cpp  plugin_manager.h
LemonTea/: CMakeLists.txt  config.json
LemonTea/src/: http_server.cpp  http_server.h  lemon_tea.cpp  lemon_tea.h  main.cpp  plugin_manager.cpp  plugin_manager.h
OrangeTea/: index.html  package-lock.json  package.json  vite.config.ts
OrangeTea/src/: App.vue  main.ts
OrangeTea/src/api/: index.ts
OrangeTea/src/components/: PluginLoader.vue  Sidebar.vue
OrangeTea/src/router/: index.ts
OrangeTea/src/stores/: connection.ts  plugins.ts
OrangeTea/src/styles/: main.css
OrangeTea/src/views/: ClientsView.vue  ConnectView.vue  DashboardView.vue  PluginDetailView.vue  PluginsView.vue  UpdateView.vue
common/: CMakeLists.txt
common/include/tea/: common.h  config.h  logger.h  plugin_interface.h  process_manager.h  protocol.h  tcp_connection.h  tcp_server.h  udp_socket.h
common/src/: process_manager.cpp  protocol.cpp  tcp_connection.cpp  tcp_server.cpp  udp_socket.cpp
docs/: TeaFamily_ports.md  camera_info.md  e2e-online-test.md  lemontea-api.md  macOS_build_release.md  plugin-cam-lan-stream.md  plugin-development.md  plugin-dual-slider.md  plugin-file-manager.md  plugin-monitor.md  plugin-ssh.md
plugins/: CMakeLists.txt
plugins/cam-lan-stream/: plugin.json
plugins/cam-lan-stream/client/: CMakeLists.txt
plugins/cam-lan-stream/client/src/: main.cpp
plugins/cam-lan-stream/frontend/: index.js  plugin.json
plugins/cam-lan-stream/server/: CMakeLists.txt
plugins/cam-lan-stream/server/src/: main.cpp
plugins/dual-slider/: plugin.json
plugins/dual-slider/client/: CMakeLists.txt
plugins/dual-slider/client/src/: main.cpp
plugins/dual-slider/frontend/: index.js  plugin.json
plugins/dual-slider/server/: CMakeLists.txt
plugins/dual-slider/server/src/: main.cpp
plugins/file-manager/: plugin.json
plugins/file-manager/client/: CMakeLists.txt
plugins/file-manager/client/src/: main.cpp
plugins/file-manager/frontend/: FileManagerView.vue  index.js  plugin.json
plugins/file-manager/server/: CMakeLists.txt
plugins/file-manager/server/src/: main.cpp
plugins/monitor/: plugin.json
plugins/monitor/client/: CMakeLists.txt
plugins/monitor/client/src/: main.cpp
plugins/monitor/frontend/: MonitorView.vue  index.js  plugin.json
plugins/monitor/server/: CMakeLists.txt
plugins/monitor/server/src/: main.cpp
plugins/ssh/: plugin.json
plugins/ssh/client/: CMakeLists.txt
plugins/ssh/client/src/: main.cpp
plugins/ssh/frontend/: SSHView.vue  index.js  plugin.json
plugins/ssh/server/: CMakeLists.txt
plugins/ssh/server/src/: main.cpp
scripts/: build_linux_x64_and_rpi5.sh  cross_build_common.sh  export_cam_lan_stream_plugin_linux_x64.sh  export_dual_slider_plugin_linux_x64_lemon_rpi5_honey.sh  export_file_manager_plugin_linux_x64_lemon_rpi5_honey.sh  export_monitor_plugin_linux_x64_lemon_rpi5_honey.sh  export_plugin_linux_x64_lemon_rpi5_honey.sh  export_ssh_plugin_linux_x64_lemon_rpi5_honey.sh  macOS_all_in_one.sh  macOS_build_release.sh  macOS_export_cam_lan_stream_plugin.sh  macOS_export_dual_slider_plugin.sh  macOS_export_file_manager_plugin.sh  macOS_export_monitor_plugin.sh  macOS_export_ssh_plugin.sh
